[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/parts/PartCharacterAttributesList.gd" type="Script" id=1]
[ext_resource path="res://ui/components/ComponentCharacterAttribute.tscn" type="PackedScene" id=3]

[node name="AttributesList" type="MarginContainer"]
margin_right = 130.0
margin_bottom = 495.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 149.0
margin_bottom = 502.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 137.0
margin_bottom = 490.0
rect_min_size = Vector2( 130, 0 )
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attribute1" parent="PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 130.0
rolleable = false

[node name="Attribute2" parent="PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 97.0
margin_right = 130.0
margin_bottom = 192.0
rolleable = false

[node name="Attribute3" parent="PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 194.0
margin_right = 130.0
margin_bottom = 289.0
rolleable = false

[node name="Attribute4" parent="PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 291.0
margin_right = 130.0
margin_bottom = 386.0
rolleable = false

[node name="Attribute5" parent="PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 388.0
margin_right = 130.0
margin_bottom = 483.0
rolleable = false
